Fix bugs for Older and Newer links

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: nil
                 <h1>Hi Poplar</h1>
                 <nav>
                     <ul>
-                        <li><a href="blog.html" class="fa fa-list"></a></li>
+                        <li><a href="blog" class="fa fa-list"></a></li>
                         <li><a href="https://github.com/soda1015" class="fa fa-github"></a></li>
                     </ul>
                 </nav>
