--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: nil
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>Hipoplar</title>
+    <title>HiPopulus</title>
    <link rel="stylesheet" href="css/welcome.css">
    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
@@ -13,11 +13,12 @@ layout: nil
     <div id="wrapper">
         <div id="main">
             <header id="header">
-                <h1>Hi Poplar</h1>
+                <h1>Hi Populus</h1>
                 <nav>
                     <ul>
+                        
                         <li><a href="blog" class="fa fa-list"></a></li>
-                        <li><a href="https://github.com/soda1015" class="fa fa-github"></a></li>
+                        <li><a href="https://github.com/hipopulus" class="fa fa-github"></a></li>
                     </ul>
                 </nav>
             </header>
