--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 layout: nil
 ---
 <!DOCTYPE html>
-<html><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<html>
+<head>
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <title>HiPopulus</title>
-   <link rel="stylesheet" href="css/welcome.css">
-   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+   	<link rel="stylesheet" href="css/welcome.css">
+   	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+   	<link rel="icon" href="image/hipopulus.ico" type="image/x-icon">
 </head>
 <body class="">
     <div id="wrapper">
